# LIDAR_Rover

./: .gitignore  README.md
arduino/12VMotor_Test/: 12VMotor_Test.ino
arduino/DC_LIDAR/: DC_LIDAR.ino  LIDARLite.h
arduino/EncoderTest/: EncoderTest.ino
arduino/LIDARLite/: LIDARLite.ino
arduino/MPU6050/: LIDAR.h  MPU6050.ino
arduino/RoboDriver/: RoboDriver.ino
arduino/RoboDriver_PID/: RoboDriver_PID.ino
arduino/RoboDriver_PID_Alt/: RoboDriver_PID_Alt.ino
arduino/RoboDriver_PID_Delta/: RoboDriver_PID_Delta.ino
arduino/RoboDriver_Test/: RoboDriver_Test.ino
docs/: LIDAR_viz.ipynb  pid_tuning.numbers  scans.json  speed_calculation.numbers
models/: GT2_BELT_PULLEY_TEMPLATE_v2.f3d  l298n.stl
ros/src/rover/: CMakeLists.txt  package.xml  setup.py
ros/src/rover/config/: controller.rviz  costmap_common_params.yaml  costmap_global_params.yaml  gmapping.yaml  imu.rviz  imu_calib.yaml  mapper.rviz  robot_localization.yaml  rover_control.yaml  visualization.rviz
ros/src/rover/description/: rover.urdf.xml  rover_reversed.urdf.xml
ros/src/rover/launch/: controller.launch  controller_manual.launch  differential_drive.launch  imu.launch  mapper.launch  minimal.launch  rover_diff_drive.launch  rover_manual_drive.launch  rover_rviz.launch  slam_toolbox_mapper.launch  xbox_topic.launch
ros/src/rover/nodes/: rover_controller.py  rover_diff_drive_controller.py  rover_manual_driver.py  xbox_controller.py  xbox_topic.py
ros/src/rover/rviz/: rviz_conf.rviz
ros/src/rover/src/rover/: arduino.py  commands.py  rover_controller.py
scripts/: LIDAR Interpolation.ipynb
(+28 files in other folders)
