<?xml version="1.0"?>
<package format="2">
  <name>rover</name>
  <version>0.0.1</version>
  <description>LIDAR Rover</description>

  <maintainer email="taylanpince@gmail.com">Taylan Pince</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
